--- a/src/main/java/ui/controllers/eaTab.fxml
+++ b/src/main/java/ui/controllers/eaTab.fxml
@@ -92,7 +92,7 @@
                                 </rowConstraints>
                                  <children>
                                     <Label text="Type:" />
-                                    <ComboBox fx:id="simType" onAction="#onSimTypeChanged" promptText="Click Here" GridPane.columnIndex="1" />
+                                    <ComboBox fx:id="simType" maxWidth="200.0" onAction="#onSimTypeChanged" prefWidth="200.0" promptText="Click Here" GridPane.columnIndex="1" />
                                  </children>
                               </GridPane>
                            </content>
@@ -123,7 +123,7 @@
                                  </rowConstraints>
                                  <children>
                                     <Label text="Type:" />
-                                    <ComboBox fx:id="controllerType" onAction="#onControllerTypeChanged" promptText="Click Here" GridPane.columnIndex="1" />
+                                    <ComboBox fx:id="controllerType" maxWidth="200.0" onAction="#onControllerTypeChanged" prefWidth="200.0" promptText="Click Here" GridPane.columnIndex="1" />
                                  </children>
                               </GridPane>
                            </content>
@@ -143,6 +143,22 @@
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
+                           <content>
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+                                 </children>
+                              </GridPane>
+                           </content>
                         </ScrollPane>
                      </content>
                 </TitledPane>
@@ -181,13 +197,13 @@
             </HBox>
          </children>
       </VBox>
-      <TabPane prefHeight="200.0" prefWidth="200.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="15.0" tabMaxWidth="50.0" tabMinWidth="10.0">
-        <tabs>
-          <Tab text="1">
-               <content>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <LineChart fx:id="fitnessGraph" prefHeight="434.0" prefWidth="417.0" title="Fitness" VBox.vgrow="ALWAYS">
+      <VBox prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <TabPane fx:id="graphSelector" prefHeight="200.0" prefWidth="200.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="15.0" tabMaxWidth="50.0" tabMinWidth="10.0" VBox.vgrow="ALWAYS">
+              <tabs>
+                <Tab text="1">
+                     <content>
+                        <LineChart fx:id="fitnessGraph" prefHeight="434.0" prefWidth="417.0" title="Fitness">
                           <xAxis>
                             <NumberAxis side="BOTTOM" />
                           </xAxis>
@@ -195,62 +211,68 @@
                             <NumberAxis side="LEFT" />
                           </yAxis>
                         </LineChart>
-                        <HBox prefWidth="200.0" spacing="5.0">
-                           <children>
-                              <MenuButton mnemonicParsing="false" text="Graph">
-                                <items>
-                                    <RadioMenuItem mnemonicParsing="false" onAction="#toggleGraphAnimate" selected="true" text="Animate Graph" />
-                                </items>
-                              </MenuButton>
-                              <Pane HBox.hgrow="ALWAYS" />
-                              <HBox alignment="CENTER" spacing="5.0">
-                                 <children>
-                                    <StackPane>
-                                       <children>
-                                          <Label text="Generation:" />
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets />
-                                       </HBox.margin>
-                                    </StackPane>
-                                    <StackPane>
-                                       <children>
-                                          <Label fx:id="generationTag" minWidth="30.0" text="0" />
-                                       </children>
-                                    </StackPane>
-                                 </children>
-                              </HBox>
-                              <Pane HBox.hgrow="ALWAYS" />
-                              <MenuButton mnemonicParsing="false" text="Save">
-                                <items>
-                                  <MenuItem mnemonicParsing="false" onAction="#saveFitnessGraphData" text="Save Data" />
-                                  <MenuItem mnemonicParsing="false" onAction="#saveFitnessGraph" text="Save Image" />
-                                </items>
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </MenuButton>
-                           </children>
-                           <VBox.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </VBox.margin>
-                        </HBox>
+                     </content>
+                </Tab>
+                <Tab text="2">
+                     <content>
+                        <LineChart fx:id="actionGraph" prefHeight="434.0" prefWidth="417.0" title="Actions">
+                          <xAxis>
+                            <NumberAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </LineChart>
+                     </content>
+                </Tab>
+              </tabs>
+               <padding>
+                  <Insets right="-8.0" />
+               </padding>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </TabPane>
+            <HBox prefWidth="200.0" spacing="5.0">
+               <children>
+                  <MenuButton mnemonicParsing="false" text="Graph">
+                    <items>
+                        <RadioMenuItem mnemonicParsing="false" onAction="#toggleGraphAnimate" selected="true" text="Animate Graph" />
+                    </items>
+                  </MenuButton>
+                  <Pane HBox.hgrow="ALWAYS" />
+                  <GridPane hgap="10.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" />
+                      <RowConstraints minHeight="10.0" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Fitness:" GridPane.rowIndex="1" />
+                        <Label fx:id="fitnessTag" minWidth="30.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="generationTag" minWidth="30.0" text="0" GridPane.columnIndex="1" />
+                        <Label text="Generation:" />
                      </children>
-                  </VBox>
-               </content>
-          </Tab>
-          <Tab text="2">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-        </tabs>
-         <padding>
-            <Insets right="-8.0" />
-         </padding>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </TabPane>
+                  </GridPane>
+                  <Pane HBox.hgrow="ALWAYS" />
+                  <MenuButton mnemonicParsing="false" text="Save">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#saveFitnessGraphData" text="Save Data" />
+                      <MenuItem mnemonicParsing="false" onAction="#saveFitnessGraph" text="Save Image" />
+                    </items>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </MenuButton>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
   </items>
 </SplitPane>
